[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/shot_glass.png" type="Texture" id=1]
[ext_resource path="res://Entities/Vial.gd" type="Script" id=2]
[ext_resource path="res://Assets/action_indicator.png" type="Texture" id=3]
[ext_resource path="res://Assets/Vial.tres" type="SpriteFrames" id=4]

[sub_resource type="CircleShape2D" id=7]
radius = 16.0

[node name="Vial" type="Node2D" groups=[
"vial",
]]
script = ExtResource( 2 )

[node name="GlassSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = ExtResource( 4 )
frame = 1
playing = true

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )
vframes = 3
hframes = 5

[node name="ActionIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -24 )
z_index = 11
texture = ExtResource( 3 )

[node name="PickUpBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpBox"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )
[connection signal="body_entered" from="PickUpBox" to="." method="_on_PickUpBox_body_entered"]
[connection signal="body_exited" from="PickUpBox" to="." method="_on_PickUpBox_body_exited"]
